# HideousWarehouse

./: BaseException.h  CMakeLists.txt  CppParser.cpp  CppParser.h  Document.cpp  Document.h  File.cpp  File.h  Json.cpp  Json.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Project.cpp  Project.h  TextEdit.h  main.cpp
cmake/: FindLibClang.cmake
core/: BaseDocument.cpp  BaseDocument.h  BaseProject.cpp  BaseProject.h  DocumentModel.cpp  DocumentModel.h  GitIgnoreFilterModel.cpp  GitIgnoreFilterModel.h  IPlugin.h  PluginManager.cpp  PluginManager.h
gui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  TextEdit.cpp
plugins/: CMakeLists.txt
plugins/cmake/: CMakePlugin.cpp  CMakePlugin.h  CMakeProject.cpp  CMakeProject.h
plugins/cpp/: CppCompletionModel.cpp  CppCompletionModel.h  CppDocument.cpp  CppDocument.h  CppManager.cpp  CppManager.h  CppOutlineModel.cpp  CppOutlineModel.h  CppPlugin.cpp  CppPlugin.h  CppSyntaxHighlighter.cpp  CppSyntaxHighlighter.h  CppUnit.cpp  CppUnit.h
resources/: resources.qrc
